--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,9 @@
   </head>
   <body style="padding: -20rem">
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="drawer-hook"></div>
+    <div id="modal-hook"></div>
+    <div id="backdrop-hook"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
