--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
   </head>
   <body style="padding: -20rem">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="drawer-hook"></div>
+    <div id="formModal-hook"></div>
     <div id="modal-hook"></div>
     <div id="backdrop-hook"></div>
     <div id="root"></div>
